error-dialog alert fixed

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
         <form name="myForm" action="">
             <div class="weight">
-                <p class="area-peso">
-                    <img class="img-peso" src="./content/weight.png" alt="">
+                <p class="weight-input">
+                    <img class="icon" src="./content/weight.png" alt="">
                     <label class="text-input" for="input-weight"> Informe seu peso (Kg):</label>
                 </p>
                 <input required placeholder="ex:50" class="box-input" id="input-weight" type="number" step="1">
             </div>
             <div class="height">
                 <p class="area-peso">
-                    <img class="img-peso" src="./content/height.png" alt="">
+                    <img class="icon" src="./content/height.png" alt="">
                     <label class="text-input" for="input-altura">Informe sua altura (m):</label>
                 </p>
                 <input required placeholder="ex:1,00" class="box-input" id="input-height" type="number" step="1">
@@ -42,8 +42,8 @@
         </form>
 
         <div class="block-footer" id="block-result">
-            <p class="paragrafo-resultado">
-                Seu IMC: <Strong id="resultImc"> </Strong>
+            <p class="result">
+                Seu IMC: <Strong id="valueImc"> </Strong>
             </p>
             <p class="paragrafo-faixa">
                 Este valor considera que você está na faixa
